[gd_scene load_steps=17 format=2]

[ext_resource path="res://Hud/HomeMainMenuImages/HudMainMenu.jpg" type="Texture" id=1]
[ext_resource path="res://scripts/HomeMenu/HomeMenu.gd" type="Script" id=2]
[ext_resource path="res://Hud/HomeMainMenuImages/TopFilter.png" type="Texture" id=3]
[ext_resource path="res://Hud/HomeMainMenuImages/Buttom.png" type="Texture" id=4]
[ext_resource path="res://Hud/HomeMainMenuImages/FullScreenPressed.png" type="Texture" id=5]
[ext_resource path="res://WorldAssets/Terrain/Niebla/Niebla3MainMenu.png" type="Texture" id=6]
[ext_resource path="res://Hud/HomeMainMenuImages/SingleOrMultiplayer.jpg" type="Texture" id=7]
[ext_resource path="res://Hud/HomeMainMenuImages/DifficultyButtons/ButtonHover2.png" type="Texture" id=8]
[ext_resource path="res://Hud/HomeMainMenuImages/DifficultyButtons/Grupo 9 copia.png" type="Texture" id=9]
[ext_resource path="res://Hud/HomeMainMenuImages/DifficultyButtons/LevelButtom.png" type="Texture" id=10]
[ext_resource path="res://Hud/HomeMainMenuImages/LevelSelectionDifficulty.jpg" type="Texture" id=11]
[ext_resource path="res://Audios/MainMenu_Ave Marimba.ogg" type="AudioStream" id=12]
[ext_resource path="res://Audios/MarimbaKeys/B_528064__sassaby__ghanaian-marimba-bb-mf.wav" type="AudioStream" id=13]
[ext_resource path="res://Audios/MarimbaKeys/C_130528__stomachache__c-1.wav" type="AudioStream" id=14]
[ext_resource path="res://Audios/MarimbaKeys/E_577686__joesh2__b3.wav" type="AudioStream" id=15]
[ext_resource path="res://Audios/MarimbaKeys/D_185833__lloydevans09__marimba-note-struck.wav" type="AudioStream" id=16]

[node name="MainMenuNode" type="Node2D"]
script = ExtResource( 2 )

[node name="3Screen" type="Node2D" parent="."]
visible = false

[node name="Levels" type="Sprite" parent="3Screen"]
position = Vector2( 960, 540 )
texture = ExtResource( 11 )

[node name="Normal" type="TextureButton" parent="3Screen"]
self_modulate = Color( 1, 1, 1, 0.576471 )
margin_left = 669.0
margin_top = 437.0
margin_right = 818.0
margin_bottom = 653.0
texture_hover = ExtResource( 10 )
stretch_mode = 2

[node name="Hard" type="TextureButton" parent="3Screen"]
self_modulate = Color( 1, 1, 1, 0.576471 )
margin_left = 886.0
margin_top = 437.0
margin_right = 1035.0
margin_bottom = 653.0
texture_hover = ExtResource( 10 )
stretch_mode = 2

[node name="KAIBIL" type="TextureButton" parent="3Screen"]
self_modulate = Color( 1, 1, 1, 0.576471 )
margin_left = 1106.0
margin_top = 437.0
margin_right = 1255.0
margin_bottom = 653.0
texture_hover = ExtResource( 10 )
stretch_mode = 2

[node name="2Screen" type="Node2D" parent="."]
visible = false

[node name="SingleOrMultiplayer" type="Sprite" parent="2Screen"]
position = Vector2( 960, 540 )
texture = ExtResource( 7 )

[node name="Cinematica" type="TextureButton" parent="2Screen"]
self_modulate = Color( 1, 1, 1, 0.576471 )
margin_left = 773.0
margin_top = 178.0
margin_right = 1150.0
margin_bottom = 239.0
texture_hover = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="SinglePlayer" type="TextureButton" parent="2Screen"]
margin_left = 572.0
margin_top = 266.0
margin_right = 1371.0
margin_bottom = 563.0
texture_hover = ExtResource( 8 )

[node name="Multiplayer" type="TextureButton" parent="2Screen"]
margin_left = 571.0
margin_top = 579.0
margin_right = 1370.0
margin_bottom = 876.0
texture_hover = ExtResource( 9 )

[node name="1Screen" type="Sprite" parent="."]
position = Vector2( 960, 540 )

[node name="Background" type="Sprite" parent="1Screen"]
texture = ExtResource( 1 )

[node name="Play" type="TextureButton" parent="1Screen"]
margin_left = -154.0
margin_top = 161.0
margin_right = 135.0
margin_bottom = 271.0
rect_scale = Vector2( 0.992, -1.332 )
texture_hover = ExtResource( 4 )
flip_v = true

[node name="Exit" type="TextureButton" parent="1Screen"]
margin_left = -157.0
margin_top = 325.0
margin_right = 132.0
margin_bottom = 435.0
rect_scale = Vector2( 0.992, -1.332 )
texture_hover = ExtResource( 4 )
flip_v = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 1640.0
margin_top = 1008.0
margin_right = 1917.0
margin_bottom = 1073.0

[node name="FullScreenPressed" type="Sprite" parent="."]
self_modulate = Color( 0.580392, 0.0666667, 0.223529, 1 )
position = Vector2( 1678, 1040 )
scale = Vector2( 0.992, -1.332 )
texture = ExtResource( 5 )

[node name="TopFilter" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Niebla3MainMenu" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.764706 )
position = Vector2( -440, -1938 )
rotation = 2.21831
scale = Vector2( 8.45373, 8.45373 )
texture = ExtResource( 6 )

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -20.091
autoplay = true

[node name="ButtomSounds" type="Node2D" parent="."]

[node name="ButtonSound" type="AudioStreamPlayer" parent="ButtomSounds"]
stream = ExtResource( 13 )
volume_db = 15.364

[node name="ButtonSound2" type="AudioStreamPlayer" parent="ButtomSounds"]
stream = ExtResource( 13 )
volume_db = 11.818

[node name="ButtonSound3" type="AudioStreamPlayer" parent="ButtomSounds"]
stream = ExtResource( 14 )
volume_db = -4.727

[node name="ButtonSound4" type="AudioStreamPlayer" parent="ButtomSounds"]
stream = ExtResource( 16 )
volume_db = 4.727

[node name="ButtonSound5" type="AudioStreamPlayer" parent="ButtomSounds"]
stream = ExtResource( 15 )
volume_db = -1.182

[connection signal="mouse_entered" from="3Screen/Normal" to="." method="_on_Normal_mouse_entered"]
[connection signal="pressed" from="3Screen/Normal" to="." method="_on_Normal_pressed"]
[connection signal="mouse_entered" from="3Screen/Hard" to="." method="_on_Hard_mouse_entered"]
[connection signal="pressed" from="3Screen/Hard" to="." method="_on_Hard_pressed"]
[connection signal="mouse_entered" from="3Screen/KAIBIL" to="." method="_on_KAIBIL_mouse_entered"]
[connection signal="pressed" from="3Screen/KAIBIL" to="." method="_on_KAIBIL_pressed"]
[connection signal="mouse_entered" from="2Screen/Cinematica" to="." method="_on_Cinematica_mouse_entered"]
[connection signal="pressed" from="2Screen/Cinematica" to="." method="_on_Cinematica_pressed"]
[connection signal="mouse_entered" from="2Screen/SinglePlayer" to="." method="_on_SinglePlayer_mouse_entered"]
[connection signal="pressed" from="2Screen/SinglePlayer" to="." method="_on_SinglePlayer_pressed"]
[connection signal="mouse_entered" from="2Screen/Multiplayer" to="." method="_on_Multiplayer_mouse_entered"]
[connection signal="pressed" from="2Screen/Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="mouse_entered" from="1Screen/Play" to="." method="_on_Play_mouse_entered"]
[connection signal="pressed" from="1Screen/Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="1Screen/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="pressed" from="1Screen/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
